2002-12-16  Christopher Faylor  <cgf@redhat.com>

	* pinfo.cc (_pinfo::cmdline): Allocate sufficient space for myself
	command line args.

2002-12-14  Steve Osborn  <bub@io.com>

	* fhandler_termios.cc (fhandler_termios::line_edit): Call
	accept_input() in character processing loop.  Set return value
	independently of input_done.

2002-12-14  Christopher Faylor  <cgf@redhat.com>

	* fhandler.cc (fhandler_base::read): Signal event, if necessary, and
	raw_read hasn't done so.

2002-12-14  Christopher Faylor  <cgf@redhat.com>

	* fhandler.cc (fhandler_base::raw_read): Reset priorities to minimize
	window where thread termination may cause data loss.
	(fhandler_base::read): Always return at end of function.  Just set len
	to copied_chars when len is zero.  Return immediately after raw_read if
	len <= 0.  Remove in_len setting and just check end instead.  Fix CRLF
	handling at end of buffer.

2002-12-14  Corinna Vinschen  <corinna@vinschen.de>

	* dcrt0.cc (dll_crt0_1): Call well known SID initializer function.
	* security.h (cygsid::init): Declare new static method.
	* sec_helper.cc (cygsid::init): New method for initializing well
	known SIDs.

2002-12-14  Pierre Humblet  <pierre.humblet@ieee.org>

	* security.h: Declare well_known_creator_group_sid.
	* sec_helper.cc: Define and initialize well_known_creator_group_sid.

2002-12-14  Corinna Vinschen  <corinna@vinschen.de>

	* netdb.cc: Remove strtok_r comment.

2002-12-14  Pierre Humblet  <pierre.humblet@ieee.org>

	* security.cc (get_user_local_groups): Use LookupAccountSid to find the
	local equivalent of BUILTIN.

2002-12-14  Christopher Faylor  <cgf@redhat.com>

	* pipe.cc (make_pipe): Set fork fixup flag for read pipe.

2002-12-14  Christopher Faylor  <cgf@redhat.com>

	* winbase.h: Turn on inline versions of Interlocked* by default.

2002-12-14  Gary R. Van Sickle <g.r.vansickle@worldnet.att.net>

	* winbase.h: Fixup inline asm functions.  Add ilockcmpexch.

2002-12-13  Christopher Faylor  <cgf@redhat.com>
